# rp-segmentation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
src/rp_segmentation/: __init__.py  exceptions.py  nltk_resources.py  segmenters.py
tests/: test_init.py  test_nltk_resources.py  test_segmenters.py
