[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rp-segmentation"
version = "0.1.0"
description = "A lightweight text segmentation and tokenization library for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Pablo Nicolás Ramos", email = "pablonicolasramos.90@gmail.com" },
    { name = "Ricardo Daniel Perez", email = "sanexto@gmail.com" }
]

maintainers = [
    { name = "Pablo Nicolás Ramos", email = "pablonicolasramos.90@gmail.com" },
    { name = "Ricardo Daniel Perez", email = "sanexto@gmail.com" }
]

keywords = [
    "nlp",
    "nltk",
    "tokenization",
    "text-processing",
    "text-segmentation",
    "natural-language-processing"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed"
]

dependencies = [
    "nltk>=3.9,<4.0",
    "regex>=2024.0.0"
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "twine>=5.0.0",
    "types-regex>=2024.0.0"
]

docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0"
]

[project.urls]
Homepage = "https://github.com/pablonicolasr/rp_segmentation"
Repository = "https://github.com/pablonicolasr/rp_segmentation"
Issues = "https://github.com/pablonicolasr/rp_segmentation/issues"
Changelog = "https://github.com/pablonicolasr/rp_segmentation/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rp_segmentation = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM"
]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["rp_segmentation"]


[[tool.mypy.overrides]]
module = [
    "nltk",
    "nltk.*"
]
ignore_missing_imports = true